--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vue/eslint-config-airbnb": "^6.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-vue": "^8.0.3",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
     "stylus": "^0.55.0",
